[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mobusoperandi/eelco"
keywords = ["nix", "doctest", "cli", "documentation", "test"]
categories = ["command-line-utilities", "development-tools::testing"]

[workspace.dependencies]
util = { path = "crates/util" }
